--- a/OneDrive/Desktop/final/se/pubspec.yaml
+++ b/OneDrive/Desktop/final/se/pubspec.yaml
@@ -1,4 +1,3 @@
-
 name: campus_ride_sharing_step1
 description: Campus Ride Sharing - Step 1 Baseline (Firebase Auth + Roles)
 publish_to: "none"
@@ -10,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  google_places_flutter: ^2.0.6
+  image_picker: ^1.0.7
   firebase_core: ^3.6.0
   firebase_auth: ^5.2.0
   cloud_firestore: ^5.0.2
@@ -22,6 +23,7 @@ dependencies:
   location: ^6.0.2
   razorpay_flutter: ^1.3.4
   geolocator: ^10.1.0
+  firebase_storage: ^12.4.10
 
 dev_dependencies:
   flutter_test:
